--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,9 +10,13 @@
         <option value="US">United States</option>
         <option value="AU">Australia</option>
         <option value="GB">Great Britain</option>
+        <option value="CH">China</option>
+        <option value="IRE">Ireland</option>
+        <option value="GER">Germany</option>
+        <option value="FRA">France</option>
     </select>
     <br><br><br>
-    <input type="submit" class="submit">
+    <input type="submit" class="submit" id="submit">
 </form>
 
 <%- include ("partials/footer")%>
