fixed div on homepage

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,3 +12,4 @@
     <div class="container">
     <h3><strong>Welcome to the weather API</strong><a class="submit home" href="/">Homepage</a></h3>
     <br><br>
+    </div>
